# tpfl

./: .gitignore  .goreleaser.yaml  Cargo.toml  LICENSE  flake.nix
src/: load_config.rs  main.rs  types.rs
